[gd_scene load_steps=4 format=3 uid="uid://w3hw52hqmvre"]

[ext_resource type="Script" path="res://Scripts/camera_control.gd" id="1_igfcl"]
[ext_resource type="PackedScene" uid="uid://0rtqamf1k7au" path="res://Scenes/main.tscn" id="2_7l7ua"]
[ext_resource type="PackedScene" uid="uid://c4ifa2t4bdsi3" path="res://Scenes/player_hud.tscn" id="3_tiwvb"]

[node name="CameraControl" type="Node"]
script = ExtResource("1_igfcl")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(576, 648)
render_target_update_mode = 4

[node name="Node2D" parent="HBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("2_7l7ua")]

[node name="Camera2D" type="Camera2D" parent="HBoxContainer/SubViewportContainer/SubViewport"]
limit_left = -864
limit_top = -1632
limit_right = 2848
limit_bottom = 800

[node name="ResidentHud" parent="HBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("3_tiwvb")]

[node name="SubViewportContainer2" type="SubViewportContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/SubViewportContainer2"]
handle_input_locally = false
size = Vector2i(576, 648)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="HBoxContainer/SubViewportContainer2/SubViewport"]
limit_left = -864
limit_top = -1632
limit_right = 2848
limit_bottom = 800

[node name="BurglarHud" parent="HBoxContainer/SubViewportContainer2/SubViewport" instance=ExtResource("3_tiwvb")]

[editable path="HBoxContainer/SubViewportContainer/SubViewport/Node2D"]
[editable path="HBoxContainer/SubViewportContainer/SubViewport/Node2D/Window"]
